--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="tn95XtBmq9MNSmQqGPwi7WVVe-R9F7-cIpx3kXFGnPs" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boxstyle.css">
-    <title>Tomat</title>
+    <title>Tomatss</title>
 </head>
 
 <body>
