--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boxstyle.css">
-    <title>Tomat</title>
+    <title>Tomatoss3s</title>
 </head>
 
 <body>
@@ -45,11 +45,11 @@
 
                     <figure>
                         <img src="images/tomato3.jpg" alt="tomato1" class="tomatos">
-                        <h5 id="tomatoh5">Tomato</h5>
+                        <h5 id="tomatoh5">Tomatoesss</h5>
                         <blockquote>Tomaten härstammar från Peru i Sydamerika och nyttjades av Inkafolket. Ordet tomat
                             kommer av det aztekiska språket nahuatls tōmatl, och det finns belägg för att tomat har
                             odlats i Mexiko sedan år 700 f.Kr. Till Norden kom tomaten på 1600-talet, men det var först
-                            mot slutet av 1700-talet som den blev allmänt känd.</blockquote>
+                            mot sluteasdqwet av 1700-talet som den blev allmänt känd.</blockquote>
 
                     </figure>
                 </li>
@@ -57,7 +57,7 @@
                     <figure>
                         <img src="images/tomato4.jpg" alt="tomato1" class="tomatos">
                         <h5>Marlise</h5>
-                        <blockquote>Tomaten härstammar från Peru i Sydamerika och nyttjades av Inkafolket. Ordet tomat
+                        <blockquote>Tomatensd härstammar från Peru i Sydamerika och nyttjades av Inkafolket. Ordet tomat
                             kommer av det aztekiska språket nahuatls tōmatl, och det finns belägg för att tomat har
                             odlats i Mexiko sedan år 700 f.Kr. Till Norden kom tomaten på 1600-talet, men det var först
                             mot slutet av 1700-talet som den blev allmänt känd.</blockquote>
