--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
                     <li><a href="index.html">home</a></li>
                     <li><a href="#typav">products</a></li>
-                    <li><a href="#">about</a></li>
+                    <li><a href="#">abouts</a></li>
                     <li onclick="openForm()"><a href="#openformcontact">contact</a></li>
                 </ul>
             </nav>
