--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boxstyle.css">
-    <title>Tomatoss3s</title>
+    <title>Tomatos13s</title>
 </head>
 
 <body>
