--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boxstyle.css">
 
-    <title>Tomatss</title>
+    <title>Tomats</title>
 
   
 </head>
@@ -26,7 +26,7 @@
 
                 <ul class="show-desktop hide-mobile" id="nav">
                     <li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="index.html">homee</a></li>
                     <li><a href="#typav">products</a></li>
                     <li><a href="#">abouts</a></li>
                     <li onclick="openForm()"><a href="#openformcontact">contact</a></li>
